Project 0/force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <description>Full mailing address of the field</description>
    <formula>Name + &#39;, &#39; + City__c + &#39;, &#39; +State__c + &#39;, &#39; + Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>