Project 0/force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>