Project 0/force-app/main/default/objects/Address__c/validationRules/Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Validation</fullName>
    <active>true</active>
    <description>Validates if zip code is numeric and minimum 5 characters</description>
    <errorConditionFormula>NOT(REGEX(Zip_Code__c, &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Please enter Zip Code in a number format</errorMessage>
</ValidationRule>